crates/sotf-plugins/tests/snapshots/render_plan_snapshots__aec__aec__iphone_portrait.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "aec",
  "width": 390.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "vertical",
  "knob_size": "xs",
  "group_direction": "column",
  "slider_height": 120.0,
  "show_visualizations": false,
  "columns_visible": [
    "main"
  ],
  "columns_collapsed": [
    "output"
  ],
  "visible_group_ids": [
    "primary"
  ],
  "overflow_group_ids": [],
  "config_controls": [],
  "main_groups": [
    {
      "id": "primary",
      "title": "",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Echo Tail",
          "control_type": "vertical_slider",
          "unit": "ms",
          "range": [
            50.0,
            500.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 1,
          "param_name": "Step Size",
          "control_type": "vertical_slider",
          "unit": "",
          "range": [
            0.1,
            0.9
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "output_controls": [
    {
      "param_index": 2,
      "param_name": "Post-Filter",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false,
      "enabled": true
    }
  ],
  "tabs": [],
  "viz_slots": [],
  "dynamic_sections": []
}
